<resources>
    <string name="app_name">Bus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_logo">ap6logo White</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_recording">Перезаписи</string>
    <string name="menu_bus">Автобусы</string>
    <string name="menu_mmc">Флеш-карты</string>
    <string name="menu_device">Информаторы</string>
    <string name="search">Поиск...</string>
</resources>