<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recording"
            android:icon="?attr/actionModePasteDrawable"
            android:title="@string/menu_recording" />
        <item
            android:id="@+id/nav_bus"
            android:icon="@android:drawable/stat_notify_voicemail"
            android:title="@string/menu_bus" />
        <item
            android:id="@+id/nav_mmc"
            android:icon="@android:drawable/stat_notify_sdcard"
            android:title="@string/menu_mmc" />
        <item
            android:id="@+id/nav_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@android:drawable/ic_lock_silent_mode_off"
            android:title="@string/menu_device" />
    </group>
</menu>