<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_recording">

    <fragment
        android:id="@+id/nav_recording"
        android:name="com.example.bus.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_recording" />

    <fragment
        android:id="@+id/nav_bus"
        android:name="com.example.bus.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_bus" />

    <fragment
        android:id="@+id/nav_mmc"
        android:name="com.example.bus.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_mmc" />
</navigation>